--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,10 +8,15 @@
     "48": "images/icon_48.png",
     "128": "images/icon_128.png"
   },
-
-  "background": {
-    "persistent": false
+  "browser_action": {
+    "default_icon": "images/icon_16.png",
+    "default_popup": "popup.html"
   }
+
+  // "background": {
+  //   "scripts": ["background.js"],
+  //   "persistent": false
+  // }
 
 
 }
