--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,7 +11,9 @@
   "browser_action": {
     "default_icon": "images/icon_16.png",
     "default_popup": "popup.html"
-  }
+  },
+
+  "permissions": ["https://tw.stock.yahoo.com/*"]
 
   // "background": {
   //   "scripts": ["background.js"],
