--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.13.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
