--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,7 +12,7 @@
     "default_icon": "images/icon_16.png",
     "default_popup": "popup.html"
   },
-
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
   "permissions": [
     "https://tw.stock.yahoo.com/*",
     "storage"
