add sync storage class and adjust readme

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "ystock",
+  "name": "yStock",
   "version": "1.0.0",
   "description": "一個簡單看股票的小工具",
   "icons": {
@@ -17,11 +17,4 @@
     "https://tw.stock.yahoo.com/*",
     "storage"
    ]
-
-  // "background": {
-  //   "scripts": ["background.js"],
-  //   "persistent": false
-  // }
-
-
 }
