tse, otc display in title

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,9 +8,14 @@
     "48": "images/icon_48.png",
     "128": "images/icon_128.png"
   },
+  "background": {
+    "scripts": ["bg.js"],
+    "persistent": false
+  },
   "browser_action": {
     "default_icon": "images/icon_16.png",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_title": "yStock"
   },
   "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
   "permissions": [
