--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Sero Hsueh",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
