--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ystock",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "easy stock list chrome extension from yahoo!kimo stock",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   "author": "Sero Hsueh",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
