--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.13.1",
+    "react-sortable-hoc": "^0.8.3",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
